Menu: Fix image alignment and large corner radius (#296)
* Fix image alignment

* add back base padding

* no units on 0

--- a/gtk-3.22/gtk-widgets.css
+++ b/gtk-3.22/gtk-widgets.css
@@ -1812,7 +1812,7 @@ menu,
 window.menu,
 window.popup {
     padding: 4px 0;
-    border-radius: 4px;
+    border-radius: 3px;
     background-color: @bg_color;
     box-shadow:
         inset 0 0 0 1px alpha (@bg_highlight_color, 0.1),
@@ -1904,16 +1904,24 @@ menuitem arrow.bottom {
     -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
 }
 
-menuitem label,
 menuitem image,
+menuitem label,
 modelbutton label,
-.menuitem label,
-.menuitem image {
+.menuitem image,
+.menuitem label {
     padding: 3px;
 }
 
 menu:dir(ltr) menuitem image:first-child {
-    margin-left: -16px;
+    margin-left: -17px;
+    padding-left: 0;
+    padding-right: 2px;
+}
+
+menu:dir(rtl) menuitem image:first-child {
+    margin-right: -17px;
+    padding-left: 2px;
+    padding-right: 0;
 }
 
 modelbutton {
